--- a/html-pages/css/style.css
+++ b/html-pages/css/style.css
@@ -28,8 +28,16 @@
     margin-right: 20px;
 }
 
+.wrapper{
+    width:900px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+
 .addTaskFormcontainer{
     width:250px;
+    margin-left: 10%;
     padding-left: 10px;
     padding-right: 10px;   
     border-style: double;
@@ -39,9 +47,10 @@
 
 .viewTaskFormcontainer{
     border-style: double;
-    width: 400px;
-    float:right;
-    margin-left: 20px;
+    width: 650px;
+    float:left;
+    margin-left: 10%;
+    margin-top: 30px;
     background-color: honeydew;
     text-align: center;
 }
@@ -108,6 +117,22 @@
     width:150px
 }
 
+.reminderContainer{
+    width:500px;
+    background-color: cadetblue;
+    margin-left: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;   
+    border-style: double;
+    background-color: lightsteelblue;
+}
+
+#reminderTable td{
+    border-style: solid;
+    border-width: 1px;
+}
+
 #updateTaskTable input{
     margin-left: 2px;
     margin-top: 2px;
@@ -115,6 +140,10 @@
     border-style: solid;
     border-width: 2px;
     border-color: black;
+}
+
+#DeleteView{
+    width:1000px;
 }
 
 #DeleteView  th{
@@ -170,9 +199,4 @@
     margin-left: 2px;
     border-width: 2px;
     border-style: solid;
-}
-
-.tablefield1{
-    width: 390px;
-    border-width: 2px;
 }
